--- a/block-BJaael/code/style.css
+++ b/block-BJaael/code/style.css
@@ -26,10 +26,24 @@ ul {
 
 ol,
 ul {
+  display: flex;
   list-style: none;
+  flex-wrap: wrap;
 }
 
 img {
   max-width: 100%;
   height: auto;
+}
+li {
+  width: 4rem;
+  height: 4rem;
+  text-align: center;
+  border: 2px solid black;
+  background-color: rgba(255, 255, 255, 0.8);
+}
+h1 {
+ text-align: center;
+ padding: 2rem 0;
+
 }
